Bug 108920 - [AMDGPU][TAHITI XT] linux unable to boot since rc3 rebase
Summary: [AMDGPU][TAHITI XT] linux unable to boot since rc3 rebase
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/AMDgpu (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: highest blocker
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-02 17:11 UTC by Sylvain BERTRAND
Modified: 2018-12-03 12:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
possible fix (1.37 KB, patch)
2018-12-03 02:50 UTC, Alex Deucher
no flags Details | Splinter Review

Description Sylvain BERTRAND 2018-12-02 17:11:36 UTC
did my weekly update of the 3D stack, and with a today git user space linux rc3 is not able to boot and linux from last week(rc1) is fine
(branch amd-staging-drm-next)


Yes, I can bisect
Comment 1 Sylvain BERTRAND 2018-12-02 18:33:05 UTC
Bisected:

due to many compilation errors, git say any of the following commit could be
the culprit:
663480d4e1460943de83ef14e86b8d2b0776edc6
971dbfb07e6ab4c5113898df25f39815c867a49c
103fcde3210ae17101bc1c64a78d074d61cf5cf7
85d5f3312d67bf8def41110447d19de3a0665754
0bf89d5dd1ee497df340ce932f0726d499cf9316

Seems the new doorbell support code has a broken SI(TAHITI XT) code path:

commit 663480d4e1460943de83ef14e86b8d2b0776edc6
Author: Oak Zeng <ozeng@amd.com>
Date:   Mon Nov 19 09:51:20 2018 -0600

    drm/amdgpu: Doorbell index initialization for ASICs before vega10
    
    Initialize doorbell index for asics vi and cik
    
    v2: Use enum definition instead of hardcoded number
    
    Change-Id: Id64eb98f5b1c24b51eb2fd5a083086fc3515813d
    Signed-off-by: Oak Zeng <ozeng@amd.com>
    Suggested-by: Felix Kuehling <Felix.Kuehling@amd.com>
    Suggested-by: Alex Deucher <alexander.deucher@amd.com>
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>


commit 971dbfb07e6ab4c5113898df25f39815c867a49c
Author: Oak Zeng <ozeng@amd.com>
Date:   Mon Nov 19 15:59:53 2018 -0600

    drm/amdgpu: Doorbell layout for vega20 and future asic
    
    This introduces new doorbell layout for vega20 and future asics
    
    v2: Use enum definition instead of hardcoded value
    
    Change-Id: I04d22fb717ac50483c0835f160a2e860e344f358
    Signed-off-by: Oak Zeng <ozeng@amd.com>
    Suggested-by: Felix Kuehling <Felix.Kuehling@amd.com>
    Suggested-by: Alex Deucher <alexander.deucher@amd.com>
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>


commit 103fcde3210ae17101bc1c64a78d074d61cf5cf7
Author: Oak Zeng <ozeng@amd.com>
Date:   Mon Nov 19 09:25:37 2018 -0600

    drm/amdgpu: Vega10 doorbell index initialization
    
    v2: Use enum definition instead of hardcoded value
    v3: Remove unused enum definition
    
    Change-Id: Ib72058337f0aa53adfc6c6aae5341a7cd665111a
    Signed-off-by: Oak Zeng <ozeng@amd.com>
    Suggested-by: Felix Kuehling <Felix.Kuehling@amd.com>
    Suggested-by: Alex Deucher <alexander.deucher@amd.com>
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>


commit 85d5f3312d67bf8def41110447d19de3a0665754
Author: Oak Zeng <ozeng@amd.com>
Date:   Mon Nov 19 14:36:09 2018 -0600

    drm/amdgpu: Call doorbell index init on device initialization
    
    Also call functioin amdgpu_device_doorbell_init after
    amdgpu_device_ip_early_init because the former depends
    on the later to set up asic-specific init_doorbell_index
    function
    
    Change-Id: I2f004bbbe2565035460686f4fc16e86b77a2a9b5
    Signed-off-by: Oak Zeng <ozeng@amd.com>
    Suggested-by: Felix Kuehling <Felix.Kuehling@amd.com>
    Suggested-by: Alex Deucher <alexander.deucher@amd.com>
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>


commit 0bf89d5dd1ee497df340ce932f0726d499cf9316
Author: Oak Zeng <ozeng@amd.com>
Date:   Mon Nov 19 15:20:07 2018 -0600

    drm/amdgpu: Use asic specific doorbell index instead of macro definition
    
    ASIC specific doorbell layout is used instead of enum definition
    
    Change-Id: Iffff84475efcfb482c474fccb133010abb5df5f4
    Signed-off-by: Oak Zeng <ozeng@amd.com>
    Suggested-by: Felix Kuehling <Felix.Kuehling@amd.com>
    Suggested-by: Alex Deucher <alexander.deucher@amd.com>
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>
Comment 2 Alex Deucher 2018-12-03 02:50:51 UTC
Created attachment 142693 [details] [review]
possible fix

This patch should fix it.
Comment 3 Sylvain BERTRAND 2018-12-03 12:55:29 UTC
the patch fixes it
thx


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.